# clawshake

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  config.toml
.github/workflows/: ci.yml
crates/clawshake/: Cargo.toml
crates/clawshake-app/: Cargo.toml  tauri.conf.json
crates/clawshake-app/src/: main.rs
crates/clawshake-bridge/: Cargo.toml
crates/clawshake-bridge/src/: announce.rs  backend.rs  cli.rs  codec.rs  ipc.rs  ipc_server.rs  lib.rs  main.rs  network.rs  network_tools.rs  p2p.rs  proxy.rs  stream.rs  watch.rs  watcher.rs
crates/clawshake-bridge/src/p2p/: addr.rs  event.rs  keypair.rs  mod.rs  models.rs  tunnel.rs
crates/clawshake-broker/: Cargo.toml
crates/clawshake-broker/src/: builtins.rs  cli.rs  consent.rs  event_queue.rs  expose.rs  http_server.rs  lib.rs  main.rs  mcp_server.rs  router.rs  watcher.rs  webview.rs
crates/clawshake-broker/src/http_server/: auth.rs  mod.rs
crates/clawshake-broker/src/invoke/: cli.rs  codemode.rs  cron.rs  deeplink.rs  events.rs  expose.rs  http.rs  mcp.rs  memory.rs  mod.rs  script.rs  shell.rs  spawn.rs  webview.rs  window.rs
crates/clawshake-channels/: Cargo.toml
crates/clawshake-channels/src/: cli_repl.rs  lib.rs
crates/clawshake-core/: Cargo.toml
crates/clawshake-core/src/: config.rs  identity.rs  ipc.rs  lib.rs  manifest.rs  mcp_client.rs  models.rs  network_channel.rs  peer_table.rs  permissions.rs  protocol.rs  stream.rs
crates/clawshake-desktop/: Cargo.toml
crates/clawshake-desktop/src/: main.rs
crates/clawshake-memory/: Cargo.toml
crates/clawshake-memory/src/: config.rs  lib.rs  main.rs  procedural.rs  skills.rs  types.rs  watch.rs  write.rs
crates/clawshake-memory/src/db/: chunks.rs  embedder.rs  mod.rs  search.rs
crates/clawshake-memory/src/ingest/: dream.rs  files.rs  mod.rs  transcript.rs
crates/clawshake-models/: Cargo.toml
crates/clawshake-models/src/: backend.rs  lib.rs  proxy.rs
crates/clawshake-sandbox/: Cargo.toml
crates/clawshake-sandbox/src/: config.rs  error.rs  handle.rs  lib.rs
crates/clawshake-sandbox/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/clawshake-tools/: Cargo.toml
crates/clawshake-tools/src/: cli.rs  client.rs  ipc.rs  lib.rs  main.rs  network.rs  schema.rs  shell.rs
crates/clawshake-window/: Cargo.toml  tauri.conf.json
crates/clawshake-window/capabilities/: default.json
crates/clawshake-window/src/: lib.rs  main.rs
crates/clawshake/src/: main.rs  network_cli.rs
docs/: dht-announcement-schema.md
docs/internal/: code-mode.md
manifests/: README.md  brave-search.json  calendar.json  contacts.json  fetch.json  filesystem.json  finder.json  homeassistant.json  mail.json  messages.json  music.json  notes.json  playwright.json  reminders.json  safari.json  spotify.json  system.json  vscode.json
