[workspace]
resolver = "2"
members = [
    "crates/clawshake-core",
    "crates/clawshake-bridge",
    "crates/clawshake-broker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lidn12/clawshake"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# P2P
libp2p = { version = "0.55", features = [
    "tokio",
    "tcp",
    "dns",
    "noise",
    "yamux",
    "kad",
    "identify",
    "mdns",
    "request-response",
    "macros",
] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# SQLite
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Manifest watcher
notify = "7"

# Deep link / open URLs
open = "5"

# Home directory resolution
dirs = "5"

# Stream utilities
futures = "0.3"

# Internal crates
clawshake-core = { path = "crates/clawshake-core" }
