[workspace]
resolver = "2"
members = [
    "crates/clawshake-core",
    "crates/clawshake-bridge",
    "crates/clawshake-tools",
    "crates/clawshake-broker",
    "crates/clawshake-models",
    "crates/clawshake",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lidn12/clawshake"
description = "Give your AI agent tools that work across machines"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# P2P
libp2p = { version = "0.56", features = [
    "tokio",
    "tcp",
    "quic",
    "dns",
    "noise",
    "yamux",
    "kad",
    "identify",
    "mdns",
    "request-response",
    "relay",
    "autonat",
    "dcutr",
    "macros",
    "rendezvous",
    "upnp",
] }
libp2p-stream = "0.4.0-alpha"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# SQLite
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Manifest watcher
notify = "7"

# Deep link / open URLs
open = "5"

# Home directory resolution
dirs = "5"

# Binary lookup on PATH
which = "7"

# Stream utilities
futures = "0.3"
async-stream = "0.3"
bytes = "1"

# HTTP server (broker SSE transport)
axum = "0.7"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

# Internal crates
clawshake-core = { path = "crates/clawshake-core" }
clawshake-tools = { path = "crates/clawshake-tools" }
clawshake-models = { path = "crates/clawshake-models" }

[profile.dist]
inherits = "release"
lto = true          # whole-program dead-code elimination across crate boundaries
codegen-units = 1   # required for LTO to be effective
opt-level = "z"     # optimise for size over speed (safe for I/O-bound workloads)
