[package]
name = "clawshake-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "clawshake_bridge"
path = "src/lib.rs"

[[bin]]
name = "clawshake-bridge"
path = "src/main.rs"

[dependencies]
clawshake-core = { workspace = true }
clawshake-tools = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
libp2p = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
notify = { workspace = true }
