[package]
name = "clawshake-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "P2P bridge that connects local MCP backends to the clawshake network"

[lib]
name = "clawshake_bridge"
path = "src/lib.rs"

[[bin]]
name = "clawshake-bridge"
path = "src/main.rs"

[dependencies]
clawshake-core = { workspace = true }
clawshake-models = { workspace = true }
clawshake-tools = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
libp2p = { workspace = true }
libp2p-stream = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
notify = { workspace = true }
