[package]
name = "clawshake-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local MCP server that loads tool manifests and serves them to AI agents"

[lib]
name = "clawshake_broker"
path = "src/lib.rs"

[[bin]]
name = "clawshake-broker"
path = "src/main.rs"

[dependencies]
clawshake-core = { workspace = true }
clawshake-tools = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
notify = { workspace = true }
open = { workspace = true }
dirs = { workspace = true }
axum = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
which = { workspace = true }
