[package]
name = "clawshake-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive I/O channels (CLI REPL, future: web, Slack) for clawshake agents"

[lib]
name = "clawshake_channels"
path = "src/lib.rs"

[dependencies]
clawshake-core  = { workspace = true }
tokio   = { workspace = true }
serde   = { workspace = true }
serde_json = { workspace = true }
anyhow  = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid    = { workspace = true }
