[package]
name = "clawshake-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, identity, config, and protocol definitions for clawshake"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
