[package]
name = "clawshake-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Process-level sandboxing for clawshake tool execution"

[lib]
name = "clawshake_sandbox"
path = "src/lib.rs"

[dependencies]
tokio         = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tempfile      = { workspace = true }

# Unix: namespace / mount / signal utilities
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = "0.2"

# Linux: seccomp BPF filter compilation + Landlock LSM
[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.4"
landlock    = "0.4"

# Windows: Job objects, restricted tokens
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
