[package]
name = "clawshake-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in network discovery and remote invocation tools for clawshake"

[[bin]]
name = "clawshake-tools"
path = "src/main.rs"

[lib]
name = "clawshake_tools"
path = "src/lib.rs"

[dependencies]
clawshake-core = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
