[package]
name = "clawshake-window"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native window shell for clawshake (Tauri v2)"

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
