[package]
name = "clawshake-window"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native window shell for clawshake (Tauri v2)"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
url = "2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
