[package]
name = "clawshake"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for running clawshake broker, bridge, and network tools"

[[bin]]
name = "clawshake"
path = "src/main.rs"

[dependencies]
clawshake-core     = { workspace = true }
clawshake-channels = { workspace = true }
clawshake-bridge   = { path = "../clawshake-bridge" }
clawshake-broker   = { path = "../clawshake-broker", default-features = false }

tokio             = { workspace = true }
clap              = { workspace = true }
anyhow            = { workspace = true }
serde_json        = { workspace = true }
toml              = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
dirs              = { workspace = true }

[features]
default = ["memory"]
memory = ["clawshake-broker/memory"]
